@@ -39,6 +39,7 @@
 #include "core/processing.h"
 #include "core/sequence_filtering.h"
 #include "core/OS_utils.h"
+#include "io/FITS_symlink.h"
 #include "io/conversion.h"
 #include "io/image_format_fits.h"
 #include "io/sequence.h"
@@ -2590,6 +2591,89 @@ int process_convertraw(int nb) {
 	args->multiple_output = FALSE;
 	gettimeofday(&(args->t_start), NULL);
 	start_in_new_thread(convert_thread_worker, args);
+	return 0;
+}
+
+int process_link(int nb) {
+	GDir *dir;
+	GError *error = NULL;
+	const gchar *file;
+	GList *list = NULL;
+	int idx = 1;
+	gchar *destroot = g_strdup(word[1]);
+
+	if (get_thread_run()) {
+		PRINT_ANOTHER_THREAD_RUNNING;
+		return 1;
+	}
+
+	if (word[2]) {
+		char *current = word[2], *value;
+		if (g_str_has_prefix(current, "-start=")) {
+			value = current + 7;
+			idx = (atoi(value) <= 0 || atoi(value) >= 100000) ? 1 : atoi(value);
+		}
+	}
+
+	if ((dir = g_dir_open(com.wd, 0, &error)) == NULL){
+		siril_log_message(_("Conversion: error opening working directory %s.\n"), com.wd);
+		fprintf (stderr, "Conversion: %s\n", error->message);
+		g_error_free(error);
+		set_cursor_waiting(FALSE);
+		return 1;
+	}
+
+	int count = 0;
+	while ((file = g_dir_read_name(dir)) != NULL) {
+		const char *ext = get_filename_ext(file);
+		if (!ext)
+			continue;
+		image_type type = get_type_for_extension(ext);
+		if (type == TYPEFITS) {
+			list = g_list_append(list, g_strdup(file));
+			count++;
+		}
+	}
+	if (!count) {
+		siril_log_message(_("No FITS files were found for conversion\n"));
+		return 1;
+	}
+	/* sort list */
+	list = g_list_sort(list, (GCompareFunc) strcompare);
+	/* convert the list to an array for parallel processing */
+	char **files_to_link = malloc(count * sizeof(char *));
+	if (!files_to_link) {
+		PRINT_ALLOC_ERR;
+		return 1;
+	}
+	GList *orig_list = list;
+	for (int i = 0; i < count && list; list = list->next, i++)
+		files_to_link[i] = g_strdup(list->data);
+	g_list_free_full(orig_list, g_free);
+
+	siril_log_color_message(_("Conversion: processing %d RAW files...\n"), "green", count);
+
+	set_cursor_waiting(TRUE);
+	if (!com.script)
+		control_window_switch_to_tab(OUTPUT_LOGS);
+
+	if (!com.wd) {
+		siril_log_message(_("Conversion: no working directory set.\n"));
+		set_cursor_waiting(FALSE);
+		return 1;
+	}
+
+	struct _symlink_data *args = malloc(sizeof(struct _symlink_data));
+	args->start = idx;
+	args->dir = dir;
+	args->list = files_to_link;
+	args->total = count;
+	args->command_line = TRUE;
+	args->destroot = destroot;
+	args->input_has_a_seq = FALSE;
+	gettimeofday(&(args->t_start), NULL);
+	start_in_new_thread(symlink_thread_worker, args);
+
 	return 0;
 }
 
