@@ -22,6 +22,7 @@ int save_opened_fits(fits *f);
 int savefits(const char*, fits*);
 int copyfits(fits *from, fits *to, unsigned char oper, int layer);
 int copy_fits_metadata(fits *from, fits *to);
+int copy_fits_from_file(char *source, char *destination);
 int save1fits16(const char *filename, fits *fit, int layer);
 int save1fits32(const char *filename, fits *fit, int layer);
 int siril_fits_open_diskfile(fitsfile **fptr, const char *filename, int iomode,
